MNGNF-194: Update to remove "View All Auctions" btn on mobile and various responsive fixes.

--- a/app/styles/pages/_analytics.scss
+++ b/app/styles/pages/_analytics.scss
@@ -54,13 +54,13 @@
 
         .block {
           .block-title {
-            padding: 10px 0 5px;
-            display: inline-block;
             font-size: 16px;
             font-weight: bold;
           }
 
           .block-content {
+            padding-top: 10px;
+            padding-bottom: 10px;
             font-size: 16px;
             font-style: normal;
           }
@@ -123,12 +123,6 @@
   }
 
   .movers-chart {
-    position: absolute;
-    top: 100px;
-    right: 10px;
-    overflow: hidden;
-    width: 65%;
-
     .chart-obj {
       height: 385px;
       width: 100%;
@@ -142,7 +136,6 @@
   .movers-container,
   .top-auctions-container {
     position: relative;
-    height: 510px;
   }
 
   .business-summary {
@@ -159,6 +152,12 @@
 
 @media only screen and (max-width: 991px) {
   #AnalyticsPage {
+    .movers-container {
+      .btn {
+        white-space: normal;
+      }
+    }
+
     .business-summary {
       .plan-count {
         font-size: 20px;
